--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -160,7 +160,7 @@ margin-bottom: 12%;
         .principal-img{
             background-image: url('../img/Hero Image.jpg');
             background-size: 100% 100%;
-            height: auto;
+            height: 100vh;
         }
 
         .content{
