--- a/Assets/css/search.css
+++ b/Assets/css/search.css
@@ -148,7 +148,7 @@ footer{
 
 .card{
     width: 75%;
-    padding: 3%;
+    padding: 2%;
     border-radius: 8px;
     border: 1px solid rgb(204, 204, 204);
     margin: 2%;
@@ -176,6 +176,11 @@ footer{
     background-color: white;
     border-radius: 8px;
     height: 45px;
+}
+
+.boton{
+    text-decoration: none;
+    color: black;
 }
 
 
